--- a/docker_compose/storages.yaml
+++ b/docker_compose/storages.yaml
@@ -2,10 +2,13 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:13
+    image: postgres:16
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_DB_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB_NAME}
     container_name: example-db
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - ${POSTGRES_PORT}:5432
     volumes:
     - postgres_data:/var/lib/postgresql/data
     env_file:
