--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-DJANGO_SECRET_KEY=mysecretkey
+# Database
 POSTGRES_DB_NAME=clean_marketplace
 POSTGRES_DB_USER=postgres
 POSTGRES_DB_PASSWORD=my_password
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5435
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+# App
+DJANGO_SECRET_KEY=mysecretkey
+DJANGO_PORT=8000
