--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ django-environ = "^0.11.2"
 django-ninja = "^1.1.0"
 
 
+[tool.poetry.group.dev.dependencies]
+isort = "^5.13.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
