Setup pytest and faker testing for django project
- Write fixture with pytest
- Write faker and factory_boy generation of DjangoModelFacor data using
  ORM for testing it with pytest_django library and mark.django_db pytest decorator
- Update makefile with run tests new commands
- Write tests for products handlers/endpoints to check count and
  existing product list in database

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,13 @@
 *.pyc
-__pycache__
+__pycache__/
 .vscode/
-*.sqlite3
+*.sqlite*
 .venv/
 *.md
 
 docker_compose/
+.env.example
+requirements.txt
+README.md
+docs/
+tests/
