--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^8.1.1"
 pytest-django = "^4.8.0"
 faker = "^24.2.0"
 factory-boy = "^3.3.0"
+ipython = "^8.22.2"
 
 [build-system]
 requires = ["poetry-core"]
