--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ django = "^5.0.3"
 psycopg2 = "^2.9.9"
 django-environ = "^0.11.2"
 django-ninja = "^1.1.0"
-dependency-injector = "^4.41.0"
+punq = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
